Bullet top spacing fixed

--- a/container.css
+++ b/container.css
@@ -69,6 +69,7 @@
                                                     flex-shrink: 0;
                                                     color: inherit;
                                                     font-size: 1.2em;
+                                                    margin-top: 3px;
                                                 }
                                     
                                                 ul.custom-list p {
